Saving book, authors and readers in Firestore

--- a/app/src/main/res/layout/fragment_add_book.xml
+++ b/app/src/main/res/layout/fragment_add_book.xml
@@ -336,14 +336,14 @@
 
            </com.google.android.material.textfield.TextInputLayout>
 
-           <!-- COUNT OF BOOK READINGS 1 -->
+           <!-- AMOUNT OF BOOK READINGS 1 -->
            <com.google.android.material.textfield.TextInputLayout
-               android:id="@+id/til_readings_count_1"
+               android:id="@+id/til_readings_amount_1"
                style="@style/LargeTextInputLayout"
                android:layout_below="@+id/til_reader_contact_1_2">
 
                <com.google.android.material.textfield.TextInputEditText
-                   android:id="@+id/et_readings_count_1"
+                   android:id="@+id/et_readings_amount_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
@@ -431,14 +431,14 @@
 
            </com.google.android.material.textfield.TextInputLayout>
 
-           <!-- COUNT OF BOOK READINGS 2 -->
+           <!-- AMOUNT OF BOOK READINGS 2 -->
            <com.google.android.material.textfield.TextInputLayout
-               android:id="@+id/til_readings_count_2"
+               android:id="@+id/til_readings_amount_2"
                style="@style/LargeTextInputLayout"
                android:layout_below="@+id/til_reader_contact_2_2">
 
                <com.google.android.material.textfield.TextInputEditText
-                   android:id="@+id/et_readings_count_2"
+                   android:id="@+id/et_readings_amount_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
@@ -526,14 +526,14 @@
 
            </com.google.android.material.textfield.TextInputLayout>
 
-           <!-- COUNT OF BOOK READINGS 3 -->
+           <!-- AMOUNT OF BOOK READINGS 3 -->
            <com.google.android.material.textfield.TextInputLayout
-               android:id="@+id/til_readings_count_3"
+               android:id="@+id/til_readings_amount_3"
                style="@style/LargeTextInputLayout"
                android:layout_below="@+id/til_reader_contact_3_2">
 
                <com.google.android.material.textfield.TextInputEditText
-                   android:id="@+id/et_readings_count_3"
+                   android:id="@+id/et_readings_amount_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
@@ -621,14 +621,14 @@
 
            </com.google.android.material.textfield.TextInputLayout>
 
-           <!-- COUNT OF BOOK READINGS 4 -->
+           <!-- AMOUNT OF BOOK READINGS 4 -->
            <com.google.android.material.textfield.TextInputLayout
-               android:id="@+id/til_readings_count_4"
+               android:id="@+id/til_readings_amount_4"
                style="@style/LargeTextInputLayout"
                android:layout_below="@+id/til_reader_contact_4_2">
 
                <com.google.android.material.textfield.TextInputEditText
-                   android:id="@+id/et_readings_count_4"
+                   android:id="@+id/et_readings_amount_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
@@ -717,14 +717,14 @@
 
            </com.google.android.material.textfield.TextInputLayout>
 
-           <!-- COUNT OF BOOK READINGS 5 -->
+           <!-- AMOUNT OF BOOK READINGS 5 -->
            <com.google.android.material.textfield.TextInputLayout
-               android:id="@+id/til_readings_count_5"
+               android:id="@+id/til_readings_amount_5"
                style="@style/LargeTextInputLayout"
                android:layout_below="@+id/til_reader_contact_5_2">
 
                <com.google.android.material.textfield.TextInputEditText
-                   android:id="@+id/et_readings_count_5"
+                   android:id="@+id/et_readings_amount_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
