RecyclerView adapter and UI for BooksFragment.kt

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="gold">#DCB669</color>
-    <color name="silver">#C0C0C0</color>
+    <color name="silver">#909090</color>
     <color name="grey">#505050</color>
 </resources>
