--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,6 +36,36 @@
         <item name="android:layout_marginTop">@dimen/normal_margin</item>
     </style>
 
+    <style name="TitleRecyclerView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/normal_text</item>
+        <item name="android:textColor">@color/grey</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginTop">@dimen/small_normal_margin</item>
+        <item name="android:layout_marginStart">@dimen/side_normal_margin</item>
+
+    </style>
+
+    <style name="SmallTextRecyclerView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/small_text</item>
+        <item name="android:textColor">@color/grey</item>
+        <item name="android:layout_marginTop">@dimen/small_normal_margin</item>
+        <item name="android:layout_marginStart">@dimen/side_normal_margin</item>
+
+    </style>
+
+    <style name="EmptyFragmentText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/normal_text</item>
+        <item name="android:textColor">@color/silver</item>
+        <item name="android:text">@string/empty</item>
+        <item name="android:layout_centerInParent">true</item>
+    </style>
+
 
     <!--EDIT TEXT STYLE-->
 
@@ -114,6 +144,27 @@
         <item name="android:textStyle">bold</item>
         <item name="android:layout_marginStart">-90dp</item>
         <item name="android:layout_marginTop">14dp</item>
+    </style>
+
+
+    <!--SEPARATOR-->
+    <style name="Separator">
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:layout_marginTop">@dimen/small_margin</item>
+        <item name="android:layout_marginStart">@dimen/normal_margin</item>
+        <item name="android:layout_marginEnd">@dimen/normal_margin</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@color/silver</item>
+    </style>
+
+
+    <!-- PROGRESS BAR-->
+    <style name="ProgressBar">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:indeterminate">true</item>
+        <item name="android:indeterminateTintMode">src_atop</item>
+        <item name="android:indeterminateTint">@color/gold</item>
     </style>
 
 </resources>
