--- a/app/src/main/res/layout/fragment_add_reader.xml
+++ b/app/src/main/res/layout/fragment_add_reader.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.Add.AddReaderFragment">
+    tools:context=".ui.fragment.add.AddReaderFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="ADD READER"
-        android:textSize="@dimen/large_text"/>
+        style="@style/EmptyFragmentText"
+        android:text="@string/wait_for_update"
+        android:layout_centerInParent="true" />
 
-</FrameLayout>
+</RelativeLayout>
