Get data from DB to display in BooksFragment.kt

--- a/app/src/main/res/layout/fragment_books.xml
+++ b/app/src/main/res/layout/fragment_books.xml
@@ -17,6 +17,7 @@
     <TextView
         android:id="@+id/tv_empty"
         style="@style/EmptyFragmentText"
+        android:visibility="invisible"
         android:layout_centerInParent="true"/>
     
     <ProgressBar
