--- a/app/src/main/res/layout/fragment_authors3.xml
+++ b/app/src/main/res/layout/fragment_authors3.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragment.books.BooksFragment">
+    tools:context=".ui.fragment.authors3.Authors3Fragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/books_recycler_view"
+        android:id="@+id/authors3_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -19,7 +19,7 @@
         style="@style/EmptyFragmentText"
         android:visibility="invisible"
         android:layout_centerInParent="true"/>
-    
+
     <ProgressBar
         android:id="@+id/progress_bar"
         style="@style/ProgressBar"
